# noaa-climate-normals

./: CHANGELOG.md  README.md  checks.ipynb  environment.yml  partition.ipynb  setup.cfg  to_do.md
.github/workflows/: continuous-integration.yml
examples/: catalog.json  monthly_1981-2010.json  monthly_1981-2010.parquet  monthly_1981-2010.txt  monthly_1981-2010_temp.txt
examples/gridded/: 2006_2020-daily-1.json  2006_2020-daily-dlyprcp_norm-1.tif
examples/noaa-climate-normals-gridded/: collection.json
examples/noaa-climate-normals-gridded/1991_2020-annual/: 1991_2020-annual-annprcp_max.tif  1991_2020-annual-annprcp_norm.tif  1991_2020-annual-annprcp_std.tif  1991_2020-annual-anntavg_min.tif  1991_2020-annual-anntmax_flag.tif  1991_2020-annual-anntmax_max.tif  1991_2020-annual-anntmax_min.tif  1991_2020-annual-anntmax_std.tif  1991_2020-annual-anntmin_max.tif  (+9 more)
examples/noaa-climate-normals-netcdf/: collection.json
examples/noaa-climate-normals-tabular/: collection.json
examples/tabular/: 1981_2010-annualseasonal.json  1981_2010-annualseasonal.parquet  1981_2010-daily.json  1981_2010-hourly.json  1981_2010-monthly.json  1981_2010-monthly.parquet  1991_2020-annualseasonal.json  1991_2020-annualseasonal.parquet  1991_2020-daily.json  1991_2020-daily.parquet  1991_2020-hourly.json  1991_2020-hourly.parquet  1991_2020-monthly.json  1991_2020-monthly.parquet  2006_2020-annualseasonal.json  2006_2020-annualseasonal.parquet  2006_2020-daily.json  2006_2020-hourly.json  2006_2020-hourly.parquet  2006_2020-monthly.json  annualseasonal_1981-2010.json  annualseasonal_1981-2010.parquet  annualseasonal_1991-2020.json  annualseasonal_2006-2020.json  daily_1981-2010.json  daily_1981-2010.parquet  daily_1991-2020.json  daily_2006-2020.json  daily_2006-2020.parquet  hourly_1981-2010.json  hourly_1981-2010.parquet  hourly_1991-2020.json  hourly_2006-2020.json  monthly_1981-2010.json  monthly_1981-2010.parquet  monthly_1991-2020.json  monthly_2006-2020.json  monthly_2006-2020.parquet
scripts/: check_schema.py  create_examples.py  create_geoparquet.py  create_item_assets.py  generate_examples.py  test
tests/: __init__.py  test_commands.py  test_module.py  test_stac.py
tests/gridded/: test_commands.py  test_stac.py
tests/netcdf/: test_commands.py  test_stac.py
tests/tabular/: test_commands.py  test_stac.py
(+148 files in other folders)
