[metadata]
name = stactools-noaa-climate-normals
version = attr: stactools.noaa_climate_normals.__version__
description = stactools pakcage for NOAA U.S. Climate Normals
long_description = file: README.md
long_description_content_type = text/markdown
author = Preston Hartzell
author_email = preston.hartzell@gmail.com 
url = https://github.com/stactools-packages/noaa-climate-normals
project_urls =
    Issues = https://github.com/stactools-packages/noaa-climate-normals/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.4.2
    geopandas >= 0.11.1
    pyarrow >= 9.0.0
    xarray >= 2022.9.0

[options.packages.find]
where = src

[options.package_data]
stactools.noaa_climate_normals.tabular = column_metadata/*.json
